btn color issue on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,6 +118,7 @@ input[type="text"]:focus {
   outline: none;
   border-radius: 0px;
   border: transparent 1px solid;
+  background-color: #fff !important;
 }
 
 .ingredients-btn:focus {
